metrics/promethous/k8s/domain/istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: monitoring
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  gateways:
  - gateway
  hosts:
  - "prom.zijin.haoyu95.cn"
  http:
  - route:
    - destination:
        host: prometheus-k8s
        port:
          number: 9090
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  gateways:
  - gateway
  hosts:
  - "grafana.zijin.haoyu95.cn"
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
      weight: 100
